# sovereign-os-ui

./: AppRouter.jsx.txt  Baglan.jsx.txt  DESKTOP_ROADMAP_V3.md  DecisionCard.jsx  ErrorStates.jsx.txt  JuniorLayout.jsx.txt  JuniorStatusBar.jsx.txt  OnboardingModal.jsx.txt  OnboardingModal.patch.js  RiskDetail.jsx.txt  SilentSuccessDot.jsx.txt  appveyor.yml  ekranlar.css  juniorStore.js  karar.css  key.txt  package-lock.json  package.json  polish.css  railway.toml.txt  tauri.key  tauri.key.pub  timeAgo.js  useFirstVisit.js  useGithubBridge.js  vite.config.js
.github/workflows/: .tauri-build.yml.swp  desktop-build.yml  generate-key.yml  tauri-build.yml
github/workflows/: desktop-build.yml  generate-key.yml
scripts/: bump-version.sh
src/: App.jsx  AppRouter.jsx  data.js  lang.js  main.jsx  tokens.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: decisionsApi.js
src/components/: GlobalStyle.jsx  RightPanel.jsx  RiskCard.jsx  RiskScore.jsx  Skeleton.jsx  Typewriter.jsx  UsageBar.tsx  WhyPanel.jsx
src/hooks/: useBreakpoint.js  useEnginePolling.js
src/i18n/: index.ts
src/legal/: termsOfService.ts
src/lib/: apiClient.ts  supabaseClient.ts  updater.ts
src/memory/: MemoryPanel.jsx  SearchEngine.ts  StorageManager.ts  SyncStatus.jsx  useSovereignMemory.ts
src/screens/: DashboardScreen.jsx  DecisionsScreen.jsx  LandingPage.jsx  LegalScreen.tsx  Login.tsx  OnboardingScreen.tsx  PricingScreen.tsx  Register.tsx  SettingsScreen.jsx  WaitlistAdmin.jsx
(+54 files in other folders)
